mainrepo/lib/dl_formula/dl_formula/parser/antlr/gen/DataLensParser.py
# encoding: utf-8
import sys

from antlr4 import (
    ATN,
    DFA,
    ATNDeserializer,
    NoViableAltException,
    Parser,
    ParserATNSimulator,
    ParserRuleContext,
    ParseTreeVisitor,
    PredictionContextCache,
    RecognitionException,
    RuleContext,
    Token,
    TokenStream,
)


if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class DataLensParser(Parser):
    grammarFileName = "DataLens.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'#'",
        "'##'",
        "','",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'+'",
        "'-'",
        "'^'",
        "<INVALID>",
        "<INVALID>",
        "'('",
        "')'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "SINGLE_LINE_COMMENT",
        "MULTI_LINE_COMMENT",
        "WS",
        "AMONG",
        "AND",
        "ASC",
        "BEFORE_FILTER_BY",
        "BETWEEN",
        "CASE",
        "DESC",
        "ELSE",
        "ELSEIF",
        "END",
        "EXCLUDE",
        "FALSE",
        "FIXED",
        "IF",
        "IGNORE_DIMENSIONS",
        "IN",
        "INCLUDE",
        "IS",
        "LIKE",
        "NOT",
        "NULL",
        "OR",
        "ORDER_BY",
        "THEN",
        "TOTAL",
        "TRUE",
        "WHEN",
        "WITHIN",
        "PLUS",
        "MINUS",
        "POWER",
        "MULDIV",
        "COMPARISON",
        "OPENING_PAR",
        "CLOSING_PAR",
        "INT",
        "FLOAT",
        "ESCAPED_STRING",
        "FIELD_NAME",
        "FUNC_NAME",
        "DATE_INNER",
        "DATETIME_INNER",
        "UNEXPECTED_CHARACTER",
    ]

    RULE_integerLiteral = 0
    RULE_floatLiteral = 1
    RULE_stringLiteral = 2
    RULE_dateLiteral = 3
    RULE_datetimeLiteral = 4
    RULE_genericDateLiteral = 5
    RULE_genericDatetimeLiteral = 6
    RULE_boolLiteral = 7
    RULE_nullLiteral = 8
    RULE_fieldName = 9
    RULE_orderingItem = 10
    RULE_ordering = 11
    RULE_lodSpecifier = 12
    RULE_winGrouping = 13
    RULE_beforeFilterBy = 14
    RULE_ignoreDimensions = 15
    RULE_function = 16
    RULE_elseifPart = 17
    RULE_elsePart = 18
    RULE_ifPart = 19
    RULE_ifBlock = 20
    RULE_whenPart = 21
    RULE_caseBlock = 22
    RULE_parenthesizedExpr = 23
    RULE_exprBasic = 24
    RULE_exprMain = 25
    RULE_exprSecondary = 26
    RULE_expression = 27
    RULE_parse = 28

    ruleNames = [
        "integerLiteral",
        "floatLiteral",
        "stringLiteral",
        "dateLiteral",
        "datetimeLiteral",
        "genericDateLiteral",
        "genericDatetimeLiteral",
        "boolLiteral",
        "nullLiteral",
        "fieldName",
        "orderingItem",
        "ordering",
        "lodSpecifier",
        "winGrouping",
        "beforeFilterBy",
        "ignoreDimensions",
        "function",
        "elseifPart",
        "elsePart",
        "ifPart",
        "ifBlock",
        "whenPart",
        "caseBlock",
        "parenthesizedExpr",
        "exprBasic",
        "exprMain",
        "exprSecondary",
        "expression",
        "parse",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    SINGLE_LINE_COMMENT = 4
    MULTI_LINE_COMMENT = 5
    WS = 6
    AMONG = 7
    AND = 8
    ASC = 9
    BEFORE_FILTER_BY = 10
    BETWEEN = 11
    CASE = 12
    DESC = 13
    ELSE = 14
    ELSEIF = 15
    END = 16
    EXCLUDE = 17
    FALSE = 18
    FIXED = 19
    IF = 20
    IGNORE_DIMENSIONS = 21
    IN = 22
    INCLUDE = 23
    IS = 24
    LIKE = 25
    NOT = 26
    NULL = 27
    OR = 28
    ORDER_BY = 29
    THEN = 30
    TOTAL = 31
    TRUE = 32
    WHEN = 33
    WITHIN = 34
    PLUS = 35
    MINUS = 36
    POWER = 37
    MULDIV = 38
    COMPARISON = 39
    OPENING_PAR = 40
    CLOSING_PAR = 41
    INT = 42
    FLOAT = 43
    ESCAPED_STRING = 44
    FIELD_NAME = 45
    FUNC_NAME = 46
    DATE_INNER = 47
    DATETIME_INNER = 48
    UNEXPECTED_CHARACTER = 49

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class IntegerLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(DataLensParser.INT, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_integerLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIntegerLiteral"):
                return visitor.visitIntegerLiteral(self)
            else:
                return visitor.visitChildren(self)

    def integerLiteral(self):
        localctx = DataLensParser.IntegerLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_integerLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(DataLensParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FloatLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(DataLensParser.FLOAT, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_floatLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFloatLiteral"):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)

    def floatLiteral(self):
        localctx = DataLensParser.FloatLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_floatLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(DataLensParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCAPED_STRING(self):
            return self.getToken(DataLensParser.ESCAPED_STRING, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_stringLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStringLiteral"):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)

    def stringLiteral(self):
        localctx = DataLensParser.StringLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stringLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(DataLensParser.ESCAPED_STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DateLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE_INNER(self):
            return self.getToken(DataLensParser.DATE_INNER, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_dateLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDateLiteral"):
                return visitor.visitDateLiteral(self)
            else:
                return visitor.visitChildren(self)

    def dateLiteral(self):
        localctx = DataLensParser.DateLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dateLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(DataLensParser.T__0)
            self.state = 65
            self.match(DataLensParser.DATE_INNER)
            self.state = 66
            self.match(DataLensParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatetimeLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATETIME_INNER(self):
            return self.getToken(DataLensParser.DATETIME_INNER, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_datetimeLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDatetimeLiteral"):
                return visitor.visitDatetimeLiteral(self)
            else:
                return visitor.visitChildren(self)

    def datetimeLiteral(self):
        localctx = DataLensParser.DatetimeLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_datetimeLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(DataLensParser.T__0)
            self.state = 69
            self.match(DataLensParser.DATETIME_INNER)
            self.state = 70
            self.match(DataLensParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GenericDateLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE_INNER(self):
            return self.getToken(DataLensParser.DATE_INNER, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_genericDateLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGenericDateLiteral"):
                return visitor.visitGenericDateLiteral(self)
            else:
                return visitor.visitChildren(self)

    def genericDateLiteral(self):
        localctx = DataLensParser.GenericDateLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_genericDateLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(DataLensParser.T__1)
            self.state = 73
            self.match(DataLensParser.DATE_INNER)
            self.state = 74
            self.match(DataLensParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GenericDatetimeLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATETIME_INNER(self):
            return self.getToken(DataLensParser.DATETIME_INNER, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_genericDatetimeLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGenericDatetimeLiteral"):
                return visitor.visitGenericDatetimeLiteral(self)
            else:
                return visitor.visitChildren(self)

    def genericDatetimeLiteral(self):
        localctx = DataLensParser.GenericDatetimeLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_genericDatetimeLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(DataLensParser.T__1)
            self.state = 77
            self.match(DataLensParser.DATETIME_INNER)
            self.state = 78
            self.match(DataLensParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoolLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(DataLensParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(DataLensParser.FALSE, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_boolLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBoolLiteral"):
                return visitor.visitBoolLiteral(self)
            else:
                return visitor.visitChildren(self)

    def boolLiteral(self):
        localctx = DataLensParser.BoolLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_boolLiteral)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not (_la == 18 or _la == 32):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NullLiteralContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULL(self):
            return self.getToken(DataLensParser.NULL, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_nullLiteral

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNullLiteral"):
                return visitor.visitNullLiteral(self)
            else:
                return visitor.visitChildren(self)

    def nullLiteral(self):
        localctx = DataLensParser.NullLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nullLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(DataLensParser.NULL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldNameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIELD_NAME(self):
            return self.getToken(DataLensParser.FIELD_NAME, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_fieldName

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFieldName"):
                return visitor.visitFieldName(self)
            else:
                return visitor.visitChildren(self)

    def fieldName(self):
        localctx = DataLensParser.FieldNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fieldName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(DataLensParser.FIELD_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderingItemContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(DataLensParser.ExpressionContext, 0)

        def ASC(self):
            return self.getToken(DataLensParser.ASC, 0)

        def DESC(self):
            return self.getToken(DataLensParser.DESC, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_orderingItem

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrderingItem"):
                return visitor.visitOrderingItem(self)
            else:
                return visitor.visitChildren(self)

    def orderingItem(self):
        localctx = DataLensParser.OrderingItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_orderingItem)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.expression()

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.expression()
                self.state = 88
                self.match(DataLensParser.ASC)

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.expression()
                self.state = 91
                self.match(DataLensParser.DESC)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderingContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER_BY(self):
            return self.getToken(DataLensParser.ORDER_BY, 0)

        def orderingItem(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DataLensParser.OrderingItemContext)
            else:
                return self.getTypedRuleContext(DataLensParser.OrderingItemContext, i)

        def getRuleIndex(self):
            return DataLensParser.RULE_ordering

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrdering"):
                return visitor.visitOrdering(self)
            else:
                return visitor.visitChildren(self)

    def ordering(self):
        localctx = DataLensParser.OrderingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ordering)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(DataLensParser.ORDER_BY)
            self.state = 96
            self.orderingItem()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3:
                self.state = 97
                self.match(DataLensParser.T__2)
                self.state = 98
                self.orderingItem()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LodSpecifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIXED(self):
            return self.getToken(DataLensParser.FIXED, 0)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DataLensParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DataLensParser.ExpressionContext, i)

        def INCLUDE(self):
            return self.getToken(DataLensParser.INCLUDE, 0)

        def EXCLUDE(self):
            return self.getToken(DataLensParser.EXCLUDE, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_lodSpecifier

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLodSpecifier"):
                return visitor.visitLodSpecifier(self)
            else:
                return visitor.visitChildren(self)

    def lodSpecifier(self):
        localctx = DataLensParser.LodSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_lodSpecifier)
        self._la = 0  # Token type
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(DataLensParser.FIXED)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 137512472549638) != 0:
                    self.state = 105
                    self.expression()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la == 3:
                        self.state = 106
                        self.match(DataLensParser.T__2)
                        self.state = 107
                        self.expression()
                        self.state = 112
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(DataLensParser.INCLUDE)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 137512472549638) != 0:
                    self.state = 116
                    self.expression()
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la == 3:
                        self.state = 117
                        self.match(DataLensParser.T__2)
                        self.state = 118
                        self.expression()
                        self.state = 123
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(DataLensParser.EXCLUDE)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 137512472549638) != 0:
                    self.state = 127
                    self.expression()
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la == 3:
                        self.state = 128
                        self.match(DataLensParser.T__2)
                        self.state = 129
                        self.expression()
                        self.state = 134
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WinGroupingContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOTAL(self):
            return self.getToken(DataLensParser.TOTAL, 0)

        def AMONG(self):
            return self.getToken(DataLensParser.AMONG, 0)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DataLensParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DataLensParser.ExpressionContext, i)

        def WITHIN(self):
            return self.getToken(DataLensParser.WITHIN, 0)

        def getRuleIndex(self):
            return DataLensParser.RULE_winGrouping

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWinGrouping"):
                return visitor.visitWinGrouping(self)
            else:
                return visitor.visitChildren(self)

    def winGrouping(self):
        localctx = DataLensParser.WinGroupingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_winGrouping)
        self._la = 0  # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(DataLensParser.TOTAL)
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(DataLensParser.AMONG)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 137512472549638) != 0:
                    self.state = 141
                    self.expression()
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la == 3:
                        self.state = 142
                        self.match(DataLensParser.T__2)
                        self.state = 143
                        self.expression()
                        self.state = 148
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(DataLensParser.WITHIN)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 137512472549638) != 0:
                    self.state = 152
                    self.expression()
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la == 3:
                        self.state = 153
                        self.match(DataLensParser.T__2)
                        self.state = 154
                        self.expression()
                        self.state = 159
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BeforeFilterByContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEFORE_FILTER_BY(self):
            return self.getToken(DataLensParser.BEFORE_FILTER_BY, 0)
